build: dockerize the app with compose

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "scripts": {
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "prestart": "npm run db:reset",
     "start": "node .",
     "dev": "nodemon .",
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
