build: add names to docker containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   frontend:
     build: ./front-end
+    container_name: app_frontend
     ports:
       - 3000:3000
     depends_on:
@@ -18,6 +19,7 @@ services:
       retries: 5
   backend:
     build: ./back-end
+    container_name: app_backend
     ports:
       - 3001:3001
     depends_on:
@@ -37,6 +39,7 @@ services:
       retries: 5
   database:
     image: mysql:8.0
+    container_name: app_database
     ports:
       - 3306:3306
     environment:
